Added api.js with logic to apply the intermediate certificate hotfix on the addon startup event.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,5 +7,16 @@
     "gecko": {
       "id": "hotfix-intermediate-2018@mozilla.com"
     }
+  },
+  "experiment_apis": {
+    "hotfixIntermediateCert": {
+      "parent": {
+        "paths": [["hotfixIntermediateCert"]],
+        "scopes": ["addon_parent"],
+        "script": "api.js",
+        "events": ["startup"]
+      },
+      "schema": "schema.json"
+    }
   }
 }
