Added mozillaAddons permissions (fixed addons-linter linting error)

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,6 +8,7 @@
       "id": "hotfix-intermediate-2018@mozilla.com"
     }
   },
+  "permissions": ["mozillaAddons"],
   "experiment_apis": {
     "hotfixIntermediateCert": {
       "parent": {
