--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,7 @@
       "parent": {
         "paths": [["hotfixIntermediateCert"]],
         "scopes": ["addon_parent"],
-        "script": "api.js",
+        "script": "hotfix-intermediate-2018.js",
         "events": ["startup"]
       },
       "schema": "schema.json"
