--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,11 +1,23 @@
 {
   "manifest_version": 2,
-  "name": "hotfix-intermediate-2018",
+  "name": "Fix add-ons signed before 2018 (Bug 1954818)",
   "version": "1.0.0",
   "description": "Hotfix for https://bugzilla.mozilla.org/show_bug.cgi?id=1954818",
   "browser_specific_settings": {
     "gecko": {
       "id": "hotfix-intermediate-2018@mozilla.com"
+    }
+  },
+  "permissions": ["mozillaAddons"],
+  "experiment_apis": {
+    "hotfixIntermediateCert": {
+      "parent": {
+        "paths": [["hotfixIntermediateCert"]],
+        "scopes": ["addon_parent"],
+        "script": "hotfix-intermediate-2018.js",
+        "events": ["startup"]
+      },
+      "schema": "schema.json"
     }
   }
 }
